[project]
name = "car-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Who1sWill",email = "williammateusf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
